--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>2.3.2.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -172,6 +172,13 @@
             <artifactId>expiringmap</artifactId>
             <version>${expiring.map.version}</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <!-- <version>2.0.1.Final</version> -->
+		</dependency>
+		
     </dependencies>
 
     <build>
