--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 #Server properties
-server.port=9004
+server.port=8000
 #Datasource properties
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/login_db
+spring.datasource.url=jdbc:mysql://localhost:3306/member_db?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 #JPA properties. Using ddl-auto = create will drop schema every-time.
