--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #Server properties
 server.port=8000
 
+rest.api.uri=/api/v1
+
 #Datasource properties
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/member_db?serverTimezone=UTC
