--- a/pom.xml
+++ b/pom.xml
@@ -109,10 +109,10 @@
 		</dependency>
 
 		<!--Spring Mail -->
-		<dependency>
+<!-- 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
-		</dependency>
+		</dependency> -->
 
 		<!--Template engine -->
 		<dependency>
