--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ rest.api.ver=/v1
 
 #Datasource properties
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/auth_db?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/member_db?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.testWhileIdle=true
