--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8000
 
 rest.api.ver=/v1
 
-#Datasource properties
+#Datasource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/member_db?serverTimezone=UTC
 spring.datasource.username=root
@@ -11,15 +11,14 @@ spring.datasource.password=1234
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
 
-#JPA properties. Using ddl-auto = create will drop schema every-time.
-#Choose the correct property based on development / production role.
+#Spring JPA
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.initialization-mode=always
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 
-#JWT properties
+#JWT
 app.jwt.header=Authorization
 app.jwt.header.prefix=Bearer 
 app.jwt.secret=mySecret
@@ -30,10 +29,4 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
 
 #Token properties
-app.token.email.verification.duration=3600000
-app.token.password.reset.duration=3600000
 app.token.refresh.duration=2592000000
-app.velocity.templates.location=/templates/
-
-#Logged out token cache
-app.cache.logoutToken.maxSize=1000
